lab1/Test/L1-A-4-8.cmm
int M ( int eErlpD_kWQ , int NoQp , struct v19mETBL2yBD 
  eW , int ) {
  float kR19GQnh = _BSUDuAwbwzdWbk ( ) = qabQ10oOH2W 
    
  if ( ! - nNiUwoeNR3R == QgHpfemF0_ && b85gxlmDq4UgvtE_eq 
    && LK7C || irv )   BBsghgVr0AMA ;/ 
else   if CPm )   krF <= ;


  if ( ! leR0OlXSvJgmz4IF5 = )   MBG4L4qhqwERB_KF7e 
    ;

}
( ;